Feat: 01~07번 수강 후 수정코드 추가

--- a/Section1/1.세수-중-최소값.html
+++ b/Section1/1.세수-중-최소값.html
@@ -7,7 +7,17 @@
     <script>
       function solution(a, b, c) {
         let answer;
-        answer = Math.min(a, b, c);
+        // answer = Math.min(a, b, c);
+
+        if (a < b) {
+          answer = a;
+        } else {
+          answer = b;
+        }
+
+        if (c < answer) {
+          answer = c;
+        }
         return answer;
       }
 
