--- a/Section1/3.연필개수.html
+++ b/Section1/3.연필개수.html
@@ -7,7 +7,8 @@
     <script>
       function solution(n) {
         let answer;
-        answer = Math.floor(n / 12) + 1;
+        // answer = Math.floor(n / 12) + 1;
+        answer = Math.ceil(n / 12);
         return answer;
       }
 
