--- a/Section1/7.10부제.html
+++ b/Section1/7.10부제.html
@@ -7,10 +7,14 @@
     <script>
       function solution(day, arr) {
         let answer = 0;
-        for (let i = 0; i < arr.length; i++) {
-          if (arr[i].toString().split('')[1] == day) {
-            answer++;
-          }
+        // for (let i = 0; i < arr.length; i++) {
+        //   if (arr[i].toString().split('')[1] == day) {
+        //     answer++;
+        //   }
+        // }
+
+        for (let x of arr) {
+          if (x % 10 === day) answer++;
         }
         return answer;
       }
