--- a/Section1/2.삼각형-판별하기.html
+++ b/Section1/2.삼각형-판별하기.html
@@ -8,7 +8,16 @@
       function solution(a, b, c) {
         let answer = '',
           max;
-        max = Math.max(a, b, c);
+        // max = Math.max(a, b, c);
+        if (a < b) {
+          max = b;
+        } else {
+          max = a;
+        }
+        if (max < c) {
+          max = c;
+        }
+
         if (max < a + b + c - max) {
           answer = 'YES';
         } else {
