--- a/Section1/6.홀수.html
+++ b/Section1/6.홀수.html
@@ -7,11 +7,24 @@
     <script>
       function solution(arr) {
         let answer = [];
-        let array = arr.filter((n) => n % 2 !== 0);
-        answer.push(
-          array.reduce((acc, cur) => acc + cur),
-          Math.min(...array)
-        );
+        // let array = arr.filter((n) => n % 2 !== 0);
+        // answer.push(
+        //   array.reduce((acc, cur) => acc + cur),
+        //   Math.min(...array)
+        // );
+
+        let sum = 0,
+          min = Number.MAX_SAFE_INTEGER;
+        for (let x of arr) {
+          if (x % 2 !== 0) {
+            sum += x;
+            if (x < min) {
+              min = x;
+            }
+          }
+        }
+        answer.push(sum);
+        answer.push(min);
         return answer;
       }
 
